# vk-raytracing

./: .gitignore  CMakeLists.txt  README.md  copy_assets.cmake  vc140.idb
include/: vk_rt_utils.h
shaders/: compile.sh
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  GltfScene.cpp  GltfScene.h  GltfUtils.cpp  GltfUtils.h  Renderer.cpp  Renderer.h  main.cpp  vk_rt_utils.cpp
src/Pathtracer/: Application.cpp  Application.h  Camera.cpp  Camera.h  Model.h  Renderer.cpp  Renderer.h  Scene.h  Shader.h  VulkanApp.cpp  VulkanApp.h
src/Vulkan/: Commands.cpp  Commands.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ResourceAllocator.cpp  ResourceAllocator.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Utils.cpp  Utils.h  Vma.cpp  Vulkan.h  VulkanCore.cpp  VulkanCore.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPhysicalDevices.cpp  VulkanPhysicalDevices.h  VulkanQueue.cpp  VulkanQueue.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h  VulkanWindow.cpp  VulkanWindow.h  Window.cpp  Window.h  vk_mem_alloc.cpp  vk_rt_utils.cpp  (+1 more)
src/Vulkan/Core/: Vulkan.h  VulkanCore.cpp  VulkanCore.h  VulkanPhysicalDevices.cpp  VulkanPhysicalDevices.h  VulkanQueue.cpp  VulkanQueue.h  vk_rt_utils.cpp  vk_rt_utils.h
src/shaders/: compile.bat  io_gltf.h  slang_types.h  testRaster.slang
src/vulkan/: Commands.cpp  Commands.h  Core.cpp  Core.h  Device.cpp  Device.h  GraphicsPipeline.cpp  GraphicsPipeline.h  PhysicalDevice.cpp  PhysicalDevice.h  ResourceAllocator.cpp  ResourceAllocator.h  Resources.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Utils.cpp  Utils.h  Vulkan.h  Window.cpp  Window.h
